修改管理员确认注册 url  以及修复 推送功能

--- a/res/drawable/img_led_selector.xml
+++ b/res/drawable/img_led_selector.xml
@@ -4,6 +4,7 @@
     <item android:drawable="@drawable/led_light" android:state_pressed="true"/>
     <item android:drawable="@drawable/led_light" android:state_focused="true"/>
     <item android:drawable="@drawable/led_light" android:state_enabled="false"/>
+    <item android:drawable="@drawable/led_light" android:state_selected="true"/>
     <item android:drawable="@drawable/led_defualt"/>
 
 </selector>
