--- a/res/drawable/img_fan_selector.xml
+++ b/res/drawable/img_fan_selector.xml
@@ -4,6 +4,7 @@
     <item android:drawable="@drawable/fan_on" android:state_pressed="true"/>
     <item android:drawable="@drawable/fan_on" android:state_focused="true"/>
     <item android:drawable="@drawable/fan_on" android:state_enabled="false"/>
+    <item android:drawable="@drawable/fan_on" android:state_selected="true"/>
     <item android:drawable="@drawable/fan_default"/>
 
 </selector>
