--- a/res/drawable/img_hum_selector.xml
+++ b/res/drawable/img_hum_selector.xml
@@ -4,6 +4,7 @@
     <item android:drawable="@drawable/humidity_selected" android:state_pressed="true"/>
     <item android:drawable="@drawable/humidity_selected" android:state_focused="true"/>
     <item android:drawable="@drawable/humidity_selected" android:state_enabled="false"/>
+    <item android:drawable="@drawable/humidity_selected" android:state_selected="true"/>
     <item android:drawable="@drawable/humidity_defualt"/>
 
 </selector>
