--- a/res/layout/admin_manager_layout.xml
+++ b/res/layout/admin_manager_layout.xml
@@ -5,20 +5,33 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/txt_admin_login"
+        android:id="@+id/txt_service_modify"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:background="@drawable/btn_selector"
         android:gravity="center"
-        android:padding="10dp"
-        android:text="管理员设置"
         android:layout_weight="1"
+        android:padding="10dp"
+        android:text="服务器修改"
         android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/txt_user_register"
+        android:id="@+id/txt_admin_pwd_modify"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:background="@drawable/btn_selector"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="修改管理密码"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/txt_get_users_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
@@ -26,9 +39,8 @@
         android:background="@drawable/btn_selector"
         android:gravity="center"
         android:padding="10dp"
-        android:text="用户申请注册"
+        android:text="查看注册用户"
         android:textColor="@color/white"
-        android:textSize="20sp" />
-
+        android:textSize="18sp" />
 
 </LinearLayout>
