--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -27,24 +27,25 @@
         android:text="语音识别结果" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txt_voice_result"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/txt_voice"
         android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/main_bar_bg_default" >
+            android:layout_height="118dp"
+            android:layout_weight="0.21"
+            android:background="@drawable/home_top_bg"
+            android:padding="10dp" >
 
             <ImageView
                 android:id="@+id/img_led"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:src="@drawable/img_led_selector" />
 
             <ImageView
@@ -52,6 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:src="@drawable/img_fan_selector" />
 
             <ImageView
@@ -59,6 +61,7 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:src="@drawable/img_beep_selector" />
 
             <ImageView
@@ -66,6 +69,7 @@
                 android:layout_width="0dp"
                 android:layout_height="100dp"
                 android:layout_weight="1"
+                android:padding="10dp"
                 android:src="@drawable/img_lock_selector" />
         </LinearLayout>
 
@@ -73,13 +77,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/main_bar_bg_default"
             android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/img_hum"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:padding="10dp"
                 android:src="@drawable/img_hum_selector" />
 
             <TextView
@@ -112,19 +116,30 @@
                 android:layout_toRightOf="@+id/img_hum"
                 android:text="TextView"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/txt_hum"
+                android:layout_alignBottom="@+id/txt_hum"
+                android:layout_toRightOf="@+id/txt_hum"
+                android:text="%"
+                android:textSize="18sp" />
+
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="@drawable/main_bar_bg_default"
             android:orientation="horizontal" >
 
             <ImageView
                 android:id="@+id/img_temp"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:padding="10dp"
                 android:src="@drawable/img_tmp_selector" />
 
             <SeekBar
@@ -150,6 +165,17 @@
                 android:layout_toRightOf="@+id/img_temp"
                 android:text="TextView"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/txt_temp"
+                android:layout_alignBottom="@+id/txt_temp"
+                android:layout_toRightOf="@+id/txt_temp"
+                android:textSize="18sp"
+                android:text="℃" />
+
         </RelativeLayout>
     </LinearLayout>
 
