--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -5,40 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <EditText
-        android:id="@+id/edt_admin_pwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignRight="@+id/btn_login"
-        android:layout_marginTop="39dp"
-        android:ems="10"
-        android:password="true" />
-
-    <TextView
-        android:id="@+id/txt_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_login"
-        android:layout_below="@+id/btn_login"
-        android:layout_marginTop="30dp"
-        android:text="txt_result"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/edt_url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txt_result"
-        android:layout_alignRight="@+id/btn_login"
-        android:layout_below="@+id/txt_result"
-        android:layout_marginTop="30dp"
-        android:ems="10"
-        android:hint="edt_url" >
-
-        <requestFocus />
-    </EditText>
-
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
@@ -52,29 +18,42 @@
         android:textColor="#ffffff"
         android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/edt_admin_pwd"
-        android:layout_alignBottom="@+id/edt_admin_pwd"
-        android:layout_alignLeft="@+id/btn_login"
-        android:text="@string/admin_pwd"
-        android:textSize="18sp" />
-
     <Button
         android:id="@+id/btn_signOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edt_url"
-        android:layout_alignRight="@+id/edt_url"
-        android:layout_below="@+id/edt_url"
-        android:layout_marginTop="129dp"
+        android:layout_alignLeft="@+id/btn_login"
+        android:layout_alignRight="@+id/btn_login"
+        android:layout_below="@+id/btn_login"
         android:background="@drawable/btn_selector"
         android:enabled="false"
         android:padding="10dp"
         android:text="@string/sign_out"
         android:textColor="@color/white"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edt_admin_pwd"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="45dp"
+        android:text="@string/admin_pwd"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/edt_admin_pwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_login"
+        android:layout_alignRight="@+id/btn_login"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:password="true" >
+
+        <requestFocus />
+    </EditText>
 
 </RelativeLayout>
