--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="5dp"
     android:orientation="vertical" >
 
     <TextView
@@ -27,6 +28,7 @@
         android:text="语音识别结果" />
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -126,7 +128,6 @@
                 android:layout_toRightOf="@+id/txt_hum"
                 android:text="%"
                 android:textSize="18sp" />
-
         </RelativeLayout>
 
         <RelativeLayout
@@ -173,10 +174,20 @@
                 android:layout_alignBaseline="@+id/txt_temp"
                 android:layout_alignBottom="@+id/txt_temp"
                 android:layout_toRightOf="@+id/txt_temp"
-                android:textSize="18sp"
-                android:text="℃" />
-
+                android:text="℃"
+                android:textSize="18sp" />
         </RelativeLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/txt_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txt_voice_result"
+        android:layout_alignRight="@+id/txt_voice"
+        android:background="@drawable/btn_selector"
+        android:padding="10dp"
+        android:text="刷新所有设备状态"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
