--- a/res/layout/register_layout.xml
+++ b/res/layout/register_layout.xml
@@ -12,31 +12,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/btn_register"
         android:layout_marginTop="39dp"
-        android:ems="10" />
-
-    <TextView
-        android:id="@+id/txt_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_register"
-        android:layout_below="@+id/btn_register"
-        android:layout_marginTop="30dp"
-        android:text="txt_result"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/edt_url"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txt_result"
-        android:layout_alignRight="@+id/btn_register"
-        android:layout_below="@+id/txt_result"
-        android:layout_marginTop="30dp"
-        android:ems="10"
-        android:hint="edt_url" >
-
-        <requestFocus />
-    </EditText>
+        android:ems="20" />
 
     <Button
         android:id="@+id/btn_register"
@@ -60,5 +36,25 @@
         android:layout_alignLeft="@+id/btn_register"
         android:text="@string/alias"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_register"
+        android:layout_below="@+id/btn_register"
+        android:textColor="#999999"
+        android:text="温馨提示：" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignRight="@+id/btn_register"
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="5dp"
+        android:textColor="#999999"
+        android:text="用户申请后，请等待管理员验证通过即可完成注册" />
 
 </RelativeLayout>
