--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,14 +27,14 @@
         android:id="@+id/seekBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_below="@+id/textView3"
+        android:layout_alignLeft="@+id/txt_submit"
+        android:layout_below="@+id/txt_submit"
         android:layout_marginRight="20dp"
         android:layout_marginTop="31dp"
         android:progress="20" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txt_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
