--- a/res/layout/register_layout.xml
+++ b/res/layout/register_layout.xml
@@ -50,7 +50,7 @@
         android:text="温馨提示：" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/txt_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView2"
